peac_dev/force-app/main/default/objects/IL_Update__c/IL_Update__c.object-meta.xml
<CustomObject>
    <description>SL-2703 object to keep the pending updates to be sent to InfoLease</description>
    <label>IL Update</label>
    <nameField>
        <displayFormat>ILU-{00000}</displayFormat>
        <label>IL Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IL Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>