peac_dev/force-app/main/default/objects/IL_Update__c/fields/Fields_To_Update__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Update__c</fullName>
    <description>comma separated list of field API names</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fields To Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>