peac_dev/force-app/main/default/objects/IL_Update__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>needs to be set to true when the update is sent to Infolease</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>