peac_dev/force-app/main/default/objects/IL_Update__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>it can be Contract__c, Account, Contract_Asset__c, Insurance__c</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>